--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -30,13 +30,19 @@
             </div>
         </div>
         <div class="col-md-6 pl-4 pr-4">
-            <div class="card" style="height: 100%;">
-                <div class="card-body" align="center">
+            <!-- Analysing card //-->
+            <div class="card" style="height: 100%;" *ngIf="!prediction">
+                <div class="card-body" align="center" *ngIf="!status.loading">
                     <!-- Image Selected -->
-                    <img src="https://cdn.dribbble.com/users/962171/screenshots/19903686/media/87e3fc98424a1b06cf76e50b2dcaecc9.jpg?resize=1000x750&vertical=center" *ngIf="!selectedFile" width="100%" height="100%" alt="" srcset="">
+                    <div class="empty" *ngIf="!selectedFile">
+                        <p class="text-secondary m-5">
+                            <ion-icon name="close-circle-outline" size="large"></ion-icon><br>
+                            No image selected
+                        </p>
+                    </div>
                     <img src="{{selectedFile.cdnUrl}}" *ngIf="selectedFile" width="{{selectedFile.imageInfo.width}}" height="{{selectedFile.imageInfo.height}}" alt="" srcset="">
                 </div>
-                <div class="card-body" *ngIf="false" align="center"> 
+                <div class="card-body" *ngIf="status.loading" align="center"> 
                   <!-- Loading part -->  
                     <div class="an">
                         <div class="spinner-border text-primary" role="status" style="width: 5rem; height: 5rem;">
@@ -48,9 +54,43 @@
                 </div>
                 <div class="card-footer" style="background-color: transparent;">
                     <!-- Analysing Button -->
-                    <button class="btn btn-primary btn-block">Analyse</button>
+                    <button class="btn btn-primary btn-block" (click)="lunchAnalysis()" [disabled]="!selectedFile">Analyse</button>
                 </div>
             </div>
+            <!--// Analysing card //-->
+
+            <!-- Result card -->
+            <div class="card" style="height: 100%; border: none;" *ngIf="prediction">
+                <div class="card-body">
+
+                    <div class="card" style="border-radius: 5px;">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-9">
+                                    <span class="text-secondary">Result : </span>
+                                    <h2 class="text-success" *ngIf="prediction.prediction == 'Y'">No presence of cancer</h2>
+                                    <h2 class="text-danger" *ngIf="prediction.prediction == 'N'">Presence of cancer</h2>
+
+                                </div>
+                                <div class="col-md-3" align="center">
+                                    <button class="btn btn-sm btn-dark details" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                                        <ion-icon class="text-light" name="add-outline"></ion-icon>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="collapse" id="collapseExample">
+                        <div class="card card-body">
+                          Our Result is reliable at <strong>{{ prediction.score }}%</strong>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <!--// Analysing card //-->
+
+            
         </div>
     </div>
 </div>
