add background doctors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
+<div [ngStyle]="{'background' : 'url(./assets/xrays/doctor.png)'}">
 
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
+    
+</div>
+
