--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,4 @@
 <!-- main container -->
-<img src="C:/Users/IsRa.ChaaBani/Desktop/pred/n1.tif" alt="">
 
 <div class="container-fluid space">
     <div class="row p-5">
@@ -75,15 +74,12 @@
 
                                 </div>
                                 <div class="col-md-3" align="center">
-                                    <button class="btn btn-sm btn-dark details" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                                        <ion-icon class="text-light" name="add-outline"></ion-icon>
+                                    <button class="btn btn-sm btn-dark details" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" (click)="reset()">
+                                        <ion-icon class="text-light" name="reload-circle-outline"></ion-icon>
                                     </button>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="collapse" id="collapseExample">
-                        
                     </div>
 
                 </div>
